--- a/src/features/NewsFeed/style.css
+++ b/src/features/NewsFeed/style.css
@@ -1,5 +1,7 @@
 .news-feed {
   width: 100%;
+  max-width: 1800px;
+  margin: 0 auto;
   padding: 32px;
   @media (max-width: 768px) {
     padding: 8px;
@@ -28,235 +30,5 @@
       padding: 16px 8px;
       margin: 32px 0;
     }
-  }
-}
-
-.news-article {
-  position: relative;
-  border-radius: 8px;
-  background: #ffffff;
-
-  padding: 0px 0px 16px 0px;
-  width: 100%;
-  min-width: 300px;
-  /* max-width: 500px; */
-  min-height: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: flex-start;
-  align-items: start;
-  transition: all 0.1s ease-in-out;
-  cursor: pointer;
-  overflow: hidden;
-  @media (max-width: 768px) {
-    min-width: 260px;
-    max-width: 100%;
-  }
-  &:hover {
-    background-color: #ffffff;
-    transform: translateY(-2px);
-    box-shadow: 0px 0px 16px 8px rgb(223, 223, 223), -0px -0px 16px 8px #ffffff;
-  }
-  & .separator {
-    width: 100%;
-    background-color: #0000003e;
-    border-radius: 100%;
-    height: 2px;
-  }
-  & .category-container {
-    margin-left: 16px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 4px;
-    flex-wrap: wrap;
-
-    & .category {
-      cursor: pointer;
-      border: none;
-      border-radius: 8px;
-      padding: 4px 8px;
-      background: #00000020;
-      color: #000;
-      font-size: 14px;
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-      &:hover {
-        background: #6b6b6b20;
-      }
-    }
-  }
-
-  .image {
-    cursor: pointer;
-    z-index: 0;
-    object-fit: cover;
-    object-position: center;
-    width: 100%;
-    height: 300px;
-    min-height: 300px;
-    display: block;
-    /* &.skeleton { */
-      /* Skeleton loading effect */
-      background: linear-gradient(90deg, #f0f0f0 25%, #b4b4b4 50%, #f0f0f0 75%);
-      background-size: 200% 100%;
-      animation: loading 1.5s infinite;
-    /* } */
-  }
-
-  & .content {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 0px 16px;
-    width: calc(100% - 32px);
-    height: 100%;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border-radius: 8px;
-    margin: 8px auto;
-
-    & .title {
-      margin-top: 8px;
-      cursor: pointer;
-      z-index: 1;
-      font-size: 18px;
-      /* text-align: center; */
-      display: -webkit-box;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-
-      border-radius: 8px;
-      &.skeleton {
-        min-width: 120px;
-        min-height: 24px;
-        /* Skeleton loading effect */
-        background: linear-gradient(
-          90deg,
-          #f0f0f0 25%,
-          #b4b4b4 50%,
-          #f0f0f0 75%
-        );
-        background-size: 200% 100%;
-        animation: loading 1.5s infinite;
-      }
-    }
-    & .desc {
-      cursor: pointer;
-      font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-      z-index: 1;
-
-      font-size: 14px;
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      margin-bottom: 32px;
-      border-radius: 8px;
-      &.skeleton {
-        min-width: 100%;
-        min-height: 150px;
-        /* Skeleton loading effect */
-        background: linear-gradient(
-          90deg,
-          #f0f0f0 25%,
-          #b4b4b4 50%,
-          #f0f0f0 75%
-        );
-        background-size: 200% 100%;
-        animation: loading 1.5s infinite;
-      }
-    }
-    & .dateAndAuthor {
-      margin-top: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      & .date {
-        font-size: 12px;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-
-        border-radius: 8px;
-        &.skeleton {
-          min-width: 100px;
-          min-height: 16px;
-          /* Skeleton loading effect */
-          background: linear-gradient(
-            90deg,
-            #f0f0f0 25%,
-            #b4b4b4 50%,
-            #f0f0f0 75%
-          );
-          background-size: 200% 100%;
-          animation: loading 1.5s infinite;
-        }
-      }
-
-      & .author {
-        & img {
-          opacity: 0.5;
-        }
-        display: flex;
-        gap: 4px;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 14px;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-
-        border-radius: 8px;
-        &.skeleton {
-          min-width: 100px;
-          min-height: 16px;
-          /* Skeleton loading effect */
-          background: linear-gradient(
-            90deg,
-            #f0f0f0 25%,
-            #b4b4b4 50%,
-            #f0f0f0 75%
-          );
-          background-size: 200% 100%;
-          animation: loading 1.5s infinite;
-        }
-      }
-    }
-    & .source {
-      position: absolute;
-      top: 300px;
-      left: 16px;
-      transform: translateY(-50%);
-      /* background-color: #fff; */
-      padding: 4px 8px;
-      border-radius: 16px;
-      font-size: 14px;
-
-      &::before {
-        z-index: -1;
-        content: "";
-        position: absolute;
-        inset: 0;
-        left: -8px;
-        right: -8px;
-        scale: 2 1.2;
-
-        transform: translateY(-2px) translateX(0%);
-        background: url("/images/elevated-bg.svg") no-repeat;
-        background-position: center;
-        background-size: 100% 100%; /* Force stretch */
-      }
-    }
-  }
-}
-
-@keyframes loading {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: -200% 0;
   }
 }
