--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,4 +1,22 @@
-.home{
+.home {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  & .footnotes {
+    margin-top: auto;
+    margin-bottom: 4px;
     width: 100%;
-    max-width: 1800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    font-size: 16px;
+    color: #888;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
 }
