--- a/src/layouts/MainLayout/style.css
+++ b/src/layouts/MainLayout/style.css
@@ -1,9 +1,69 @@
-.main-layout{
+.main-layout {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+
+  & > .papernoise {
+    position: fixed;
+    inset: 0;
+    height: 100vh;
+    z-index: 0;
+
+    background: linear-gradient(
+        120deg,
+        rgba(0, 0, 0, 0.314) 0%,
+        rgba(0, 0, 0, 0) 10%
+      ),
+      url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    opacity: 0.4;
+    @media (max-width: 768px) {
+      background: linear-gradient(
+          120deg,
+          rgba(0, 0, 0, 0.314) 0%,
+          rgba(0, 0, 0, 0) 10%
+        ),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    }
+  }
+  & > .logo {
+    position: absolute;
+    left: 0;
+    font-weight: 400;
+    letter-spacing: -0.25em;
+    font-size: 44px;
+    transform: translateX(32px) translateY(10px);
+  }
+  & > .title {
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    /* margin-top: -16px; */
+    rotate: -90deg;
+    transform: translateY(-50px) translateX(-60%);
+  }
+  & > .footnotes {
+    z-index: 0;
+    position: absolute;
+    bottom: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
     width: 100%;
-    min-height: 100vh;
-    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    gap: 4px;
+    font-size: 12px;
+    color: #888;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
 }
