feat: create a filters feature section that's gonna contains all filtering and search capabilities

--- a/src/features/Filters/style.css
+++ b/src/features/Filters/style.css
@@ -1,22 +1,11 @@
 .filters {
+  margin-top: 96px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: flex-start;
-
-  & .logo {
-    font-weight: 400;
-    letter-spacing: -0.25em;
-    font-size: 44px;
-    transform: translateX(32px) translateY(10px);
-  }
-  & .title {
-
-    /* margin-top: -16px; */
-    rotate: -90deg;
-    transform: translateY(-50px) translateX(-8px);
-  }
+  z-index: 20;
 
   & .inputs-container {
     padding: 0 32px;
@@ -26,18 +15,24 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-
-    & input[type="text"], & input[type="date"] {
-      border-radius: 30px;
-      background: #e0e0e0;
-      box-shadow: inset 5px 5px 15px #b1b8bb, inset -5px -5px 15px #ffffff;
-      border-top: solid 1.5px #fff;
-      min-height: 48px;
-
-      font-size: 16px;
-      outline: none;
-      border: none;
-      padding: 4px 16px;
+    & .date-filters {
+      margin-top: 16px;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 32px;
+      @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 16px;
+      }
+      & input {
+        max-width: 200px;
+        @media (max-width: 768px) {
+          max-width: unset;
+        }
+      }
     }
   }
 }
+
