--- a/src/components/inputs/AutoSuggestTagInput/style.css
+++ b/src/components/inputs/AutoSuggestTagInput/style.css
@@ -1,5 +1,4 @@
 .autosuggest.input-container {
-
   & .autosuggest-tag-input {
     display: flex;
     flex-direction: column;
@@ -32,7 +31,7 @@
       top: 90px;
       width: 100%;
       z-index: 10;
-      min-height: 200px;
+      min-height: 100px;
       background-color: #ecececbc;
       backdrop-filter: blur(5px);
       box-shadow: 0 0 50px #0000006a;
@@ -44,6 +43,16 @@
       align-items: flex-start;
       align-content: flex-start;
       gap: 4px;
+      & .no-results {
+        width: 100%;
+        margin-top: 16px;
+        align-self: center;
+        text-align: center;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        font-size: 16px;
+        color: #888;
+      }
       & .spinner {
         z-index: 10;
         position: absolute;
@@ -58,7 +67,7 @@
           opacity: 0;
         }
       }
-      & .tagchip{
+      & .tagchip {
         z-index: 20;
       }
     }
