--- a/src/features/NewsFeed/style.css
+++ b/src/features/NewsFeed/style.css
@@ -2,7 +2,9 @@
   width: 100%;
   max-width: 1800px;
   margin: 0 auto;
+  margin-top: 128px;
   padding: 32px;
+  padding-top: 0;
   z-index: 10;
   @media (max-width: 768px) {
     padding: 8px;
@@ -18,6 +20,7 @@
     padding: 32px;
     width: 100%;
     margin: 64px 0;
+    margin-top: 0;
     border-radius: 50px;
 
     background-color: #ececec;
@@ -30,6 +33,52 @@
       gap: 16px;
       padding: 16px 8px;
       margin: 32px 0;
+    }
+  }
+
+  & .your-highlights {
+    display: flex;
+
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 32px;
+    font-weight: bold;
+    cursor: default;
+    color: #000000ad;
+    transition: opacity 0.3s ease-in-out;
+    & ::selection{
+      background: none;
+    }
+    & .preferences-button {
+      /* margin-left: auto; */
+      z-index: 50;
+      padding: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      color: #090909;
+      width: 40px;
+      height: 40px;
+      font-size: 18px;
+      border-radius: 100%;
+      background: #e8e8e8;
+      cursor: pointer;
+      border: 1px solid #e8e8e8;
+      transition: all 0.3s;
+      box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+      transition: all 0.2s ease-in-out;
+      &:active {
+        color: #666;
+        box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+      }
+      &.active {
+        background: #e47575;
+        box-shadow: 0px 0px 12px #f27979;
+        border: 1px solid #e5a3a3;
+        color: #fff;
+      }
     }
   }
 }
