--- a/src/components/inputs/style.css
+++ b/src/components/inputs/style.css
@@ -10,10 +10,7 @@
     width: 100%;
     border-radius: 30px;
     background: #e0e0e0;
-    box-shadow: inset 0px 0px 16px 8px rgb(223, 223, 223),
-    -0px -0px 16px 8px #ffffff;
-    
-    border-top: solid 1.5px #fff;
+    box-shadow: inset 5px 5px 15px #b1b8bb, inset -5px -5px 15px #ffffff;
     min-height: 48px;
     
     font-size: 16px;
@@ -23,7 +20,11 @@
     padding-right: 32px;
     &:hover,
     &:focus {
-      box-shadow: inset 5px 5px 15px #b1b8bb, inset -5px -5px 15px #ffffff;
+      box-shadow: inset 0px 0px 16px 8px rgba(223, 223, 223, 0.596),
+      -0px -0px 16px 8px #ffffff96;
+      
+      border-top: solid 1.5px #fff;
+   
     }
   }
   & input[type="date"] {
