--- a/src/features/NewsFeed/style.css
+++ b/src/features/NewsFeed/style.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1800px;
   margin: 0 auto;
-  margin-top: 128px;
+  margin-top: 120px;
   /* padding: 32px; */
   padding-top: 0;
   padding-bottom: 64px;
@@ -25,12 +25,12 @@
     border-radius: 50px;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #ececec;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    /* background-color: #ececec; */
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
 
     @media (max-width: 768px) {
-      background-color: #fff;
+      /* background-color: #fff; */
       /* box-shadow: none; */
       /* grid-template-columns: 1fr; */
       border-radius: 25px;
@@ -45,7 +45,7 @@
     gap: 8px;
     justify-content: center;
     align-items: center;
-    margin-bottom: 32px;
+    margin-bottom: 0px;
     font-weight: bold;
     cursor: default;
     color: #000000ad;
