--- a/src/features/SearchSection/style.css
+++ b/src/features/SearchSection/style.css
@@ -20,7 +20,6 @@
     }
     & .inputs-container {
       display: flex;
-      flex-direction: column;
       gap: 16px;
       justify-content: flex-start;
       align-items: flex-end;
@@ -28,8 +27,6 @@
       width: 100%;
       margin: 0 auto;
       max-width: 600px;
-      display: flex;
-      flex-direction: column;
       @media (max-width: 768px) {
         padding: 0 16px;
       }
@@ -39,8 +36,10 @@
         align-items: center;
         cursor: pointer;
         color: #090909;
-        width: 40px;
-        height: 40px;
+        min-width: 48px;
+        min-height: 48px;
+        width: 48px;
+        height: 48px;
         font-size: 18px;
         border-radius: 100%;
         background: #e8e8e8;
