--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap");
 
 :root {
-  font-family: "DM Serif Text", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "DM Serif Text", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -10,6 +11,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 * {
