--- a/src/features/ArticleCard/style.css
+++ b/src/features/ArticleCard/style.css
@@ -2,7 +2,6 @@
   position: relative;
   border-radius: 8px;
   background: #ffffff;
-
   padding: 0px 0px 16px 0px;
   /* width: calc(100% - 32px); */
   width: 100%;
@@ -20,15 +19,21 @@
   transition: all 0.1s ease-in-out;
   cursor: pointer;
   overflow: hidden;
-  @media (max-width: 768px) {
-    min-width: 260px;
-    max-width: 100%;
-    border-radius: 0px;
-  }
   &:hover {
     background-color: #ffffff;
     transform: translateY(-2px);
     box-shadow: 0px 0px 16px 8px rgb(223, 223, 223), -0px -0px 16px 8px #ffffff;
+  }
+  @media (max-width: 768px) {
+    min-width: 260px;
+    max-width: 100%;
+    border-radius: 0px;
+    position: relative;
+    &:hover {
+      background-color: none;
+      transform: none;
+      box-shadow: none;
+    }
   }
   & .separator {
     width: 100%;
@@ -37,12 +42,22 @@
     height: 2px;
   }
   & .category-container {
-    margin-left: 16px;
+    width: 100%;
+    padding-left: 24px;
+    padding-bottom: 6px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 4px;
     flex-wrap: wrap;
+    @media (max-width: 768px) {
+      max-width: 100%;
+      flex-wrap: nowrap;
+      overflow-x: scroll;
+      & *{
+        white-space: nowrap;
+      }
+    }
   }
 
   .image {
@@ -66,13 +81,12 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0px 16px;
-    width: calc(100% - 32px);
+    padding: 16px 24px;
+    width: calc(100% - 16px);
     height: 100%;
     justify-content: flex-start;
     align-items: flex-start;
     border-radius: 8px;
-    margin: 8px auto;
 
     & .title {
       margin-top: 8px;
@@ -102,6 +116,7 @@
     }
     & .desc {
       width: 100%;
+      height: 42px;
       cursor: pointer;
       font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
       z-index: 1;
@@ -113,6 +128,12 @@
       overflow: hidden;
       margin-bottom: 32px;
       border-radius: 8px;
+      @media (max-width: 768px) {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
       &.skeleton {
         min-width: 100%;
         min-height: 150px;
@@ -187,7 +208,7 @@
       top: 500px;
       left: 16px;
       transform: translateY(-50%);
-      /* background-color: #fff; */
+      background-color: #fff;
       padding: 4px 8px;
       border-radius: 16px;
       font-size: 14px;
@@ -204,9 +225,9 @@
         scale: 2 1.2;
 
         transform: translateY(-2px) translateX(0%);
-        background: url("/images/elevated-bg.svg") no-repeat;
+        /* background: url("/images/elevated-bg.svg") no-repeat;
         background-position: center;
-        background-size: 100% 100%; /* Force stretch */
+        background-size: 100% 100%; */
       }
     }
   }
