--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,13 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hidden-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
