--- a/src/features/ArticleCard/style.css
+++ b/src/features/ArticleCard/style.css
@@ -6,7 +6,8 @@
   /* width: calc(100% - 32px); */
   width: 100%;
   min-width: 300px;
-  max-width: 900px;
+  max-width: 640px;
+
   min-height: 300px;
 
   margin: 32px auto;
@@ -66,8 +67,8 @@
     object-fit: cover;
     object-position: center;
     width: 100%;
-    height: 500px;
-    min-height: 500px;
+    height: 340px;
+    min-height: 340px;
     display: block;
     /* &.skeleton { */
     /* Skeleton loading effect */
@@ -82,7 +83,7 @@
     flex-direction: column;
     gap: 10px;
     padding: 16px 24px;
-    width: calc(100% - 16px);
+    width: 100%;
     height: 100%;
     justify-content: flex-start;
     align-items: flex-start;
@@ -205,7 +206,7 @@
     }
     & .source {
       position: absolute;
-      top: 500px;
+      top: 340px;
       left: 16px;
       transform: translateY(-50%);
       background-color: #fff;
