--- a/src/features/ArticleCard/style.css
+++ b/src/features/ArticleCard/style.css
@@ -46,6 +46,7 @@
     width: 100%;
     padding-left: 24px;
     padding-bottom: 6px;
+    margin-bottom: -10px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
